tests/negative/resource_destroy_non_place.ora
resource TokenUnit = u256;

contract ResourceDestroyNonPlace {
    pub fn bad(amount: TokenUnit) {
        @destroy(amount, amount);
    }
}
